:bug: outline of the markdown will hidden when overflow from outline box

--- a/src/resources/css/markdown.css
+++ b/src/resources/css/markdown.css
@@ -44,10 +44,12 @@
     margin-left: 10px;
     padding: 4px;
 }
+
 .markdown_box_tag_item:first-child:hover {
     background: rgba(25, 23, 17, 0.1);
     border-radius: 5px;
 }
+
 .markdown_box_tag .ant-select-selection {
     border: none;
     background: none;
@@ -64,17 +66,20 @@
     padding: 5px;
     border-right: 1px solid #f8f6f1;
     width: 200px;
-    height: 100%;
-    overflow: hidden;
+    height: 85%;
+    overflow-x: hidden;
+    overflow-y: scroll;
     z-index: 1000;
     background: white;
     position: fixed;
 }
 
+.markdown-tree-bar::-webkit-scrollbar {
+    width: 0px;
+}
+
 .markdown-outline-item {
-    height: 25px;
     font-size: 12px;
-    line-height: 25px;
     font-style: italic;
     overflow-x: hidden;
     text-overflow: ellipsis;
